# kollision

./: CMakeLists.txt  README.md
include/kollision/: GLRectangle.h  GLRenderer.h  engine.h  quad_tree.h  rigid_body.h
src/: main.cpp
src/graphics/: DrawableContext.cpp  DrawableContext.h  Rectangle.h  Renderer.cpp  Renderer.h  buffer.cpp  buffer.h  drawable.h  rectangle.cpp  rectangle.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/graphics/opengl/: GLBuffer.cpp  GLBuffer.h  GLRectangle.cpp  GLRectangle.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h
src/physics/: engine.cpp  rigid_body.cpp  rigid_body.h
src/shaders/: rect.frag.glsl  rect.vert.glsl
src/shape/: rectangle_shape.cpp  rectangle_shape.h  shape.h
src/util/: quad_tree.cpp  quad_tree.h  util.h
